changed nag header

--- a/index.html
+++ b/index.html
@@ -37,11 +37,13 @@
 
 		<!-- Logo -->
 
-				<div class="grid_4 alpha">
+				<div class="grid_12  alpha">
 
-					<h1 id="logo"><img src="img/circle_icon.png" alt="circle" height="42" width="42"> My Bio</h1>
+					<h1 id="logo"><img src="img/circle_icon.png" alt="circle" height="42" width="42"> Scott Williams Resume</h1>
 
 				</div>
+
+		
 				
 			</nav>	
 
