--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
   <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Nothing+You+Could+Do' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Rock+Salt' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Pompiere' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700' rel='stylesheet' type='text/css'>
 
   <link rel="stylesheet" href="css/styles.css">	
 
@@ -39,7 +41,7 @@
 
 				<div class="grid_12  alpha">
 
-					<h1 id="logo"><img src="img/circle_icon.png" alt="circle" height="42" width="42"> Scott Williams Resume</h1>
+					<h1 id="logo">Scott Williams Resume</h1>
 
 				</div>
 
@@ -72,7 +74,7 @@
 
 				<div class="grid_12">
 
-					<a name="about"><h2 id="title_cust1">About Me</h2></a>
+					<h2 id="title_cust1">About Me</h2></a>
 
 			
 					<div class="grid_6 alpha">
