added references page

--- a/index.html
+++ b/index.html
@@ -290,9 +290,14 @@
 						</blockquote>
 					</aside>	
 
-
 				</div>
 
+				<div class="grid_12">
+
+					<h2 id="title_cust1">References</h2></a>
+
+<p>Can be made available upon request.</p>
+</div>
 				
 
 				
