added references and specificity

--- a/index.html
+++ b/index.html
@@ -296,7 +296,10 @@
 
 					<h2 id="title_cust1">References</h2></a>
 
-<p>Can be made available upon request.</p>
+
+					<!-- Specificity Inline example:-->
+
+<p style="color:black">Can be made available upon request.</p>
 </div>
 				
 
