took out an unneeded tag

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 				<div class="grid_12">
 
-					<h2 id="title_cust1">Qualifications</h2></a>
+					<h2 id="title_cust1">Qualifications</h2>
 
 			
 					<div class="grid_6 alpha">
